welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: variable T is not a case class constructor, nor does it have an unapply/unapplySeq method
		var T(i)=getCouleurSol()
                    ^Array1:7: error: recursive variable i needs type
		var T(i)=getCouleurSol()
                     ^Array1:15: error: not found: value CouleurBrosse
		CouleurBrosse()=T(i)
                ^Array1:27: error: not found: value CouleurBrosse
			CouleurBrosse()=T(i)
                        ^